# cKAN

./: CMakeLists.txt  README.md
models/: dummy_model.json  model_loader.cpp  model_loader.h
src/: CMakeLists.txt  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h
src/inference/: kan_cuda.cu  kan_cuda.h  kan_engine.cpp  kan_engine.h
